syntax = "proto3";

option go_package = "galaxy/grpc";

import "google/protobuf/empty.proto";
import "grpc/HeartbeatMessage.proto";

message Node {
  string service_name = 1;
  string service_address = 2;
  uint32 service_port = 3;
  optional HeartbeatResponse.Status status = 4;
}

message RegisterResponse {
  string message = 1;
  bool success = 2;
}

service ControlService {
  rpc Heartbeat(google.protobuf.Empty) returns (HeartbeatResponse) {}
  rpc Register(Node) returns (RegisterResponse) {}
  rpc Deregister(Node) returns (RegisterResponse) {}
  rpc ListNodes(Node) returns (stream Node) {}
}